this fixes #3 . I made a class for sidemenu links and iterated over them adding a click event listener that triggered navmenu.wrapSideMenu

--- a/cms/src/index.css
+++ b/cms/src/index.css
@@ -27,7 +27,7 @@ body {
       display:inline;
   }
 }
-@media (min-width: 769px) {
+@media (min-width: 815px) {
   .onbig {
       display:inline;
   }
